[package]
name = "rmw-bytes"
description = "to bytes and from bytes"
version = "0.1.14"
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rmw-lib/node/tree/master/bytes"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"

[[example]]
name = "main"
path = "example/main.rs"
bench = false
