[package]
name = "rmw-fs"
description = "fs port map"
version = "0.1.8"
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rmw-lib/node/tree/master/fs"

[lib]
crate-type = ["lib"]

[features]
grpc-http = ["tonic-web"]
default = ["grpc-http"]

[dependencies]
dirs = "4.0.0"
lazy_static = "1.4.0"
log = "0.4.14"
igd = { version = "0.12.0", features = ["aio"] }
futures = "0.3.18"
fern = "0.6.0"
chrono = "0.4.19"
anyhow = { version = "1.0.48", features = ["std"] }
thiserror = "1.0.30"
bytes = "1.1.0"
rmw-utf8 = "0.0.5"
rmw-upnp = {path="../upnp"}
rmw-bytes = {path="../bytes"}
rmw-str  = {path="../str"}
colored = "2.0.0"
tonic = { version = "0.6.1", features = ["prost","compression"] }
prost = "0.9.0"
tonic-web = { version = "0.2.0", optional = true }
xxblake3 = "0.0.4"
num_enum = "0.5.4"
vob = "3.0.1"
hashbrown = { version = "0.11.2", features = ["ahash-compile-time-rng"] }

[dependencies.async-std]
version = "1.10.0"
features = ["unstable","attributes","tokio1"]

[build-dependencies]
tonic-build = { version = "0.6.0", features = ["prost","compression"] }

[[example]]
name = "main"
path = "example/main.rs"
bench = false
