[package]
name = "rmw_str"
description = "to str and from str"
version = "0.0.1"
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rmw-lib/node/tree/master/str"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"

[[example]]
name = "main"
path = "example/main.rs"
bench = false
