[package]
name = "rmw-upnp"
description = "upnp port map"
version = "0.1.11"
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/rmw-lib/node/tree/master/upnp"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
igd = { version = "0.12.0", features = ["aio"] }
async-std = { version = "1.10.0", features = ["tokio1","attributes"] }
thiserror = "1.0.30"

[[example]]
name = "main"
path = "example/main.rs"
bench = false
